--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,11 @@ html{
 }
 
 body {
-    max-width: 100%;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    min-height: 100vh;
+    max-width: 70rem;
+    margin: auto;
     font-family: 'Archivo', sans-serif;
     -webkit-text-size-adjust: none;
     -moz-text-size-adjust: none;
@@ -14,7 +18,22 @@ body {
 }
 
 main {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     margin: 2.5rem, 1.5rem;
+}
+
+header {
+    width: 100%;
+}
+
+section {
+    flex: 1;
+}
+
+section: last-of-type {
+    minimun-width: 100%;
 }
 
 h1, h2 {
@@ -23,9 +42,9 @@ h1, h2 {
 
 h1 {
  position: relative;
- font-size: 1.15rem;
- margin-left: 2rem;
- margin-bottom: 4rem;
+ font-size: clamp(0.8rem, 2.5vw, 1.5rem);
+ margin-left: 2em;
+ margin-bottom: 8rem;
 }
 
 h1::before {
@@ -42,7 +61,7 @@ h1::before {
 }
 
 h2 {
-    font-size: 1rem;
+    font-size: clamp(0.85rem, 2.35vw, 1.15rem);
     position: relative;
     margin-left: 2.15rem;
     margin-bottom: 4rem;
@@ -63,21 +82,22 @@ h2::before {
 
 h3, p {
     font-weight: 300;
-    line-height: 1;
 }
 
 h3.small {
-    font-size: 1rem; 
+    font-size: clamp(0.85rem, 2.35vw, 1.15rem); 
     font-weight: 700;
 }
 
 h3 {
-    font-size: 3.5em;
+    font-size: clamp(3rem, 10vw, 4rem);
+    line-height: 1;
 }
 
 p {
-    font-size: 0.9rem;
-    line-height: 1.4;
+    font-size: clamp(1rem, 2.5vw, 1.15rem);
+    line-height: 1.5;
+    max-width: 42ch;
 }
 
 ul.links, .links a {
@@ -123,14 +143,17 @@ ul.links, .links a {
 
 .images > img {
     position: absolute;
-    width:100%;
-    top: 50%;
-    left: -2rem;
+    width:90%;
+    top: 40%;
+    left: -8rem;
 }
 
 .selfie {
+    aspect-ratio: 1;
     width:100%;
+    max-width: 32rem;
     height: calc(100ww-4rem);
+    max-height: 32rem;
     position: relative;
     margin: auto;
     border-radius: 50%;
